--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,20 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = []
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.4",
+    "pytest-cov>=6.0.0",
+    "ruff>=0.9.7",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["gendiff"]
+
+[project.scripts]
+gendiff = "gendiff.scripts.gendiff:main"
